
[package]
name = "terra_payroll_system"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]  # This ensures WASM is built

[dependencies]
cw-storage-plus = "1.0"
cosmwasm-std = "1.0"
cosmwasm-storage = "1.0"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cosmwasm-schema = "1.0"
cosmwasm-vm = "1.0"

[profile.release]
opt-level = "z"  # Optimize for WASM
